finish substitution cipher draft

--- a/cipher/dictionary.yaml
+++ b/cipher/dictionary.yaml
@@ -1,9 +1,48 @@
-hello:
-world:
-"\U0001f600":
-"\U0001F606":
-"\U0001F923":
-
-
+if:
+a:
+man:
+is:
+offer:
+fact:
+which:
+go:
+against:
+his:
+instinct:
+he:
+will:
+scrutinize:
+it:
+closely:
+and:
+unless:
+the:
+evidence:
+overwhelming:
+will:
+refuse:
+to:
+believe:
+"on":
+the:
+other:
+hand:
+something:
+which:
+afford:
+reason:
+for:
+acting:
+in:
+accordance:
+his:
+accept:
+even:
+slight:
+origin:
+myth:
+explain:
+this:
+way:
 
 
