refactor substitution cipher with utils function

--- a/cipher/dictionary.yaml
+++ b/cipher/dictionary.yaml
@@ -44,5 +44,41 @@ myth:
 explain:
 this:
 way:
-
+kerckhoffs:
+principle:
+one:
+of:
+the:
+basic:
+principles:
+modern:
+cryptography:
+was:
+formulated:
+the:
+nineteenth:
+century:
+by:
+dutch:
+cryptographer:
+auguste:
+kerckhoffs:
+goes:
+as:
+follows:
+system:
+should:
+be:
+secure:
+even:
+everything:
+about:
+the:
+except:
+the:
+key:
+public:
+knowledge:
+cryptographic:
+end:
 
